--- a/css/style.css
+++ b/css/style.css
@@ -1,73 +1,245 @@
 @import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,300;0,400;1,200&display=swap');
 
-head{
+/* head{
 
-}
+} */
 
 
 body{
-    overflow: hidden;
+   
     font-family: 'Spectral', serif;
-}
-.iframe{
-   
-    max-width: clamp(100%, 100vw - 32px, 1100px);
-    /* margin: 40px 0 24px 0; */
-overflow: hidden;
+    line-height: 1.4;
 
-  margin: 0%;
-    width: 100%;
-    /* height:100%; */
-    /* margin-left: 5vw; */
-    /* margin: 40px 0 24px 0; */
-    /* margin-right: -5vw; */
-    object-fit: contain;
-   
-
-}
-.iframe-container{
-    position:absolute;
-    z-index:-10;
-    margin:-2%;
-    padding:0%;
-    width:100vw; 
-    height:100vh;
-
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
-.main-container{
-  position:absolute;
-  z-index:10%;
-    display:flex;
-}
-.main-sidebar{
-    margin: 2%;
-    width:40%;
-}
-
-.main-content{
-    margin: 2%;
-    flex: 1;
-    overflow:auto;
-}
-
-@media (max-width: 480px) {
-    .main-container{
-        display:block;
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
     }
-    .main-sidebar{
-        width:100%;
-    }
-  }
+    100% {
+        opacity: 1;
+     }
+}
 
-@media (min-width: 481px) and (max-width: 1024px) {
-  
+li{
+    list-style-type:none;
     
 }
 
-@media (min-width :1025px)  {
+
+.iframe-container{
+    /* position:absolute; */
+    z-index:-20;
+    /* margin-left:-2%; */
+    /* margin-top:-50%; */
+    /* margin-bottom:0%; */
+    padding:0%;
+    border:0%;
+    width:100vw; 
+    height:100vh;
+
    
+}
+iframe{
+    /* position: absolute; */
+    border: hidden;
+    overflow:hidden;
+    min-width: 100%;
+     min-height: 100%;
+   
+}
+.container{
+    /* position: absolute; */
+    display:flex;
+    margin: 2%;
+    padding:5%;
+    backdrop-filter: blur(2px);
+}
+
+.main-container{
+display: inline;
+
+
+
+  
+}
+.hidden{
+    display:none !important;
+}
+
+/* .projDisplay{ */
+    /* display:flex */
+    
+/* } */
+
+.projDisplay .proj-list.active{
+    background:red;
+}
+.main-sidebar{
+    position: -webkit-sticky;
+    position: sticky;
+   top:0%;
+    
+    
+    
+    width:30%;
+}
+
+/* .main-content{
+    margin: 2%;
+    flex: 1;
+   
+} */
+
+@media (max-width: 480px) {
+ 
+    body{
+      font-size: larger;
+    }
+   .container{
+      
+       display:flexbox;
+       flex-direction: column;
+       flex-wrap: nowrap;
+       backdrop-filter: blur(2px);
+     border-radius: 20%;
+
+       padding:2%
+
+   }
+   .main-sidebar{
+       background-color:white;
+       /* display: inline-block; */
+    width:99%;
+    flex-wrap: nowrap;
+    padding-left: 0%;
+/* padding-right: 90%; */
+    padding-top: 15%;
+    padding-bottom: 5%;
+    
+   
+    
+    
+}
+    .main-container{
+     
+        width:100%;
+        padding-left: 0%;
+       
+         
+        
+     
+        font-size: large;
+    }
+
+.iframe-container{
+    overflow: hidden;
+    max-width: 98%;
+    opacity: 0.6;
+    position:absolute;
+    z-index: -30;
+ 
+
+}
+iframe{
+    overflow: hidden;
+    position:absolute;
+
+}
+
+  }
+
+@media (min-width: 481px) and (max-width: 1000px) {
+    body{
+        overflow-x: hidden;
+    }
+  
+.container{
+    overflow-y: hidden;
+    display:flex;
+    /* justify-content: space-between; */
+    margin: 2%;
+    backdrop-filter: blur(2px);
+}
+
+.main-container{
+
+
+
+
+  
+}
+
+
+.main-sidebar{
+  
+    position: sticky;
+    top: 0;
+    
+
+   
+}
+
+
+
+    
+}
+
+@media (min-width:1001) and (max-width :2000px)  {
+    body{
+        font-size: 2rem;
+    }
+   
+    .main-container{
+
+       
+       padding-left:5%;
+       
+         
+       }
 .main-sidebar{
     width:50%;
+    padding-right: 0%;
+    position:sticky;
+    top:0;
+    margin-top:20%;
+    overflow-y:hidden;
 }
+}
+
+@media (min-width :2000px)  {
+    body{
+        font-size: 3rem;
+    }
+   
+    .main-container{
+
+       padding-top: 5%;
+
+       padding-left:5%;
+       
+         
+       }
+.main-sidebar{
+    width:50%;
+
+    padding-right: 0%;
+    position:sticky;
+    top:0;
+    margin-left:5%;
+    margin-top:20%;
+    overflow-y:hidden;
+}
+.iframe-container{
+margin-top:-30%;
+
+}
+.iframe{
+    width:230%;
+    height: 300%;
+}
+
 }
